# health-performance-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  schema.py
app/: app.py  feedback.py
app/pages/: 1_Dashboard.py
docs/: evaluation.md  pipeline.md  project-guidelines.md  zoomcamp-overview.md
eval/: evaluate_llm.py  evaluate_retrieval.py  generate_ground_truth.py  ground_truth.jsonl  metrics.py  test_metrics.py
eval/results/: llm_judge.json  llm_judge.md  retrieval.json  retrieval.md  retrieval_baseline_chapters.md  retrieval_pgvector.json  retrieval_pgvector.md  retrieval_rewrite.json  retrieval_rewrite.md
ingestion/: build_documents.py  chunk_by_chapters.py  fetch_transcripts.py  list_all_episodes.py  normalize.py  sources.yaml
rag/: build_vector_index.py  cli.py  compare_retrieval.py  embeddings.py  pgvector_search.py  query_rewrite.py  rag.py  rerank.py  retrieve.py  search.py  vector_search.py
