[project]
name = "health-performance-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minsearch>=0.0.4",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "tiktoken>=0.8.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.6.9",
]
